Fix auto-bringing elements to front on selection, avoid accidental text selection on click with Shift pressed (#23)

--- a/styles/widgets/_selection.scss
+++ b/styles/widgets/_selection.scss
@@ -11,6 +11,8 @@
     border-radius: 2px;
     box-shadow: 0 0 7px 7px rgba(51, 51, 51, 0.13);
     cursor: move;
+    user-select: none;
+    -webkit-user-select: none;
   }
 
   &__selectedActions {
